[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code"
authors = ["Kevin Kirsche <kevin.kirsche@one.verizon.com>"]
license = "MIT"
include = ["adventofcode/inputs/*.txt"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
pytest = "^6.2.5"

[tool.poetry.scripts]
advent = "adventofcode.cli.main:run_cli"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "test"]
verbose = 1
quiet = false
color = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["adventofcode"]
markers = ["destructive", "mutative"]

[tool.pylint."MESSAGES CONTROL"]
max_line_length = 88
disable = "C0330, C0326"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.flake8]
max_line_length = 88
max_complexity = 25
extend_ignore = "E203, W503"
exclude = [".git", "__pycache__", "old", "build", "dist"]

[tool.mypy]
python_version = "3.10"
platform = "linux"
strict = true
pretty = true
warn_return_any = true
warn_unused_configs = true
follow_imports = "normal"
plugins = []
exclude = ""

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
